--- a/zpetoslidershow/index.html
+++ b/zpetoslidershow/index.html
@@ -10,7 +10,7 @@
 <body>
     <ul class="wrapper"></ul>
     <div class="show"></div>
-    <p></p>
+    <p>this is a great idea</p>
 </body>
 <script src="js/zepto.js"></script>
 <script src="js/touch.js"></script>
