--- a/zpetoslidershow/index.html
+++ b/zpetoslidershow/index.html
@@ -11,6 +11,7 @@
     <ul class="wrapper"></ul>
     <div class="show"></div>
     <p>this is a great idea</p>
+    <p>this is a new branch</p>
 </body>
 <script src="js/zepto.js"></script>
 <script src="js/touch.js"></script>
